@@ -864,7 +864,7 @@ Localization
         #LOC_BDArmory_AIWindow_ControlHelp_modeSwitches = Post-Stall AoA Mode-Switch controls when the plane will switch steering modes due to being beyond the AoA threshold. When flying to a target within the angle of the Immelmann Turn directly behind the craft, the craft will simply pitch up instead of rolling.
 
         #LOC_BDArmory_AIWindow_EvadeHelp = Evasion/Extension controls both how the AI reacts to incoming threats, be it gunfire, missiles, or other craft, and how the AI responds to where other craft are, relative to itself. 
-        #LOC_BDArmory_AIWindow_EvadeHelp_Evade = Min Evasion Time, Distance Threshold, Time Threshold, Min Range Threshold, Don't Evade My Target - These four settings control when the AI will evade. Min Evasion Time sets how many seconds the AI will do evasive maneuvers. Distance Threshold sets how close incoming gunfire needs to come to trigger evasion. Time Threshold sets how long the AI needs to be under fire before it begins evading. The Min Range Threshold sets the range that the attacker has to be beyond to trigger evasion. The Don't Evade My Target toggle determines whether gunfire from the current target is ignored for evasion purposes.
+        #LOC_BDArmory_AIWindow_EvadeHelp_Evade = Min Evasion Time, Distance Threshold, Time Threshold, Min Range Threshold, Don't Evade My Target - These four settings control when the AI will evade. Min Evasion Time sets how many seconds the AI will do evasive maneuvers. Distance Threshold sets how close incoming gunfire needs to come to trigger evasion. Time Threshold sets how long the AI needs to be under fire before it begins evading. The Min Range Threshold sets the range that the attacker has to be beyond to trigger evasion. The Don't Evade My Target toggle determines whether gunfire from the current target is ignored for evasion purposes. The Evade Missiles Kinematically toggle tells the AI to use beyond-visual-range (BVR) maneuvers, like crank, beam, and turn cold to evade BVR missiles. The Time to Impact Before Evade setting on the weapons manager should be set to the max when "Evade Missiles Kinematically" is enabled.
         #LOC_BDArmory_AIWindow_EvadeHelp_Nonlinearity = Evasion/Extension Nonlinearity - This controls the radius of the oscillation (in degrees) around the fly-to direction that the plane will make while evading or extending. This helps planes not fly in a straight line when evading/extending.
         #LOC_BDArmory_AIWindow_EvadeHelp_Dodge = Vessel Avoidance - These three settings set how the AI reacts to potential collisions. If another vessel is predicted to get within the Avoidance Threshold within the next Look-Ahead period then the AI will try to dodge it. The Avoidance Strength determines how rapidly the AI will try to change direction to avoid a predicted collision.
         #LOC_BDArmory_AIWindow_EvadeHelp_standoff = Standoff Distance is the closest the AI will approach the targeted craft in combat. If closer than the Standoff Distance, the AI will brake to increase the distance to the target.
